@@ -13,6 +13,8 @@ linotp (3.1~0dev-0) experimental; urgency=low
   * Simplify the HMAC acountname and tokenissuer fallback rules for a more predictable
     behavior in the google authenticator url.
   * Token monitoring now better sanitizes the status parameter
+  * Improved Manage-UI error message if something fails in the initial config
+    load phase.
 
   Fixes:
   * mOTP tokens can now be used in challenge response mode
